--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -11,14 +11,14 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
+    defaults:
+      run:
+        working-directory: 'pwaApp'
     strategy:
       matrix:
         node-version: [12.x, 14.x, 16.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
     steps:
     - uses: actions/checkout@v3
     - name: Use Node.js ${{ matrix.node-version }}
@@ -27,15 +27,13 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - name: Install dependencies PWA App
-      working-directory: ./pwaApp
       run: npm i
     - name: Build PWA App
-      working-directory: ./pwaApp
       run: npm run build
     - name: Deploy
       uses: s0/git-publish-subdir-action@develop
       env:
         REPO: self
         BRANCH: gh-pages
-        FOLDER: .
+        FOLDER: ../
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
