--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -12,9 +12,6 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: 'pwaApp'
     strategy:
       matrix:
         node-version: [12.x, 14.x, 16.x]
@@ -26,14 +23,17 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+        cache-dependency-path: '**/package-lock.json' # THIS PATTERN did the trick for me.
     - name: Install dependencies PWA App
+      working-directory: ./pwaApp
       run: npm i
     - name: Build PWA App
+      working-directory: ./pwaApp
       run: npm run build
     - name: Deploy
       uses: s0/git-publish-subdir-action@develop
       env:
         REPO: self
         BRANCH: gh-pages
-        FOLDER: ../
+        FOLDER: .
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
